cdk.out/MarketPulseEcsStack.template.json
{
 "Resources": {
  "MarketPulseVpcC53BC1E4": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "MarketPulseEcsStack/MarketPulseVpc"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/Resource"
   }
  },
  "MarketPulseVpcPublicSubnet1Subnet700B32B9": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "MarketPulseEcsStack/MarketPulseVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ],
    "VpcId": {
     "Ref": "MarketPulseVpcC53BC1E4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/PublicSubnet1/Subnet"
   }
  },
  "MarketPulseVpcPublicSubnet1RouteTable3217BFED": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "MarketPulseEcsStack/MarketPulseVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ],
    "VpcId": {
     "Ref": "MarketPulseVpcC53BC1E4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/PublicSubnet1/RouteTable"
   }
  },
  "MarketPulseVpcPublicSubnet1RouteTableAssociation7100B6FA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MarketPulseVpcPublicSubnet1RouteTable3217BFED"
    },
    "SubnetId": {
     "Ref": "MarketPulseVpcPublicSubnet1Subnet700B32B9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "MarketPulseVpcPublicSubnet1DefaultRouteBC415C85": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MarketPulseVpcIGW5E27A1F0"
    },
    "RouteTableId": {
     "Ref": "MarketPulseVpcPublicSubnet1RouteTable3217BFED"
    }
   },
   "DependsOn": [
    "MarketPulseVpcVPCGWD1890218"
   ],
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "MarketPulseVpcPublicSubnet1EIPFC12C95C": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "MarketPulseEcsStack/MarketPulseVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/PublicSubnet1/EIP"
   }
  },
  "MarketPulseVpcPublicSubnet1NATGateway9EB77A57": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "MarketPulseVpcPublicSubnet1EIPFC12C95C",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "MarketPulseVpcPublicSubnet1Subnet700B32B9"
    },
    "Tags": [
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "MarketPulseEcsStack/MarketPulseVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ]
   },
   "DependsOn": [
    "MarketPulseVpcPublicSubnet1DefaultRouteBC415C85",
    "MarketPulseVpcPublicSubnet1RouteTableAssociation7100B6FA"
   ],
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/PublicSubnet1/NATGateway"
   }
  },
  "MarketPulseVpcPublicSubnet2Subnet72535A89": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "MarketPulseEcsStack/MarketPulseVpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ],
    "VpcId": {
     "Ref": "MarketPulseVpcC53BC1E4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/PublicSubnet2/Subnet"
   }
  },
  "MarketPulseVpcPublicSubnet2RouteTableD625D16F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "MarketPulseEcsStack/MarketPulseVpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ],
    "VpcId": {
     "Ref": "MarketPulseVpcC53BC1E4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/PublicSubnet2/RouteTable"
   }
  },
  "MarketPulseVpcPublicSubnet2RouteTableAssociationBB75B692": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MarketPulseVpcPublicSubnet2RouteTableD625D16F"
    },
    "SubnetId": {
     "Ref": "MarketPulseVpcPublicSubnet2Subnet72535A89"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "MarketPulseVpcPublicSubnet2DefaultRouteF9C9C32C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MarketPulseVpcIGW5E27A1F0"
    },
    "RouteTableId": {
     "Ref": "MarketPulseVpcPublicSubnet2RouteTableD625D16F"
    }
   },
   "DependsOn": [
    "MarketPulseVpcVPCGWD1890218"
   ],
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "MarketPulseVpcPrivateSubnet1SubnetAE2C0AD8": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1a",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "MarketPulseEcsStack/MarketPulseVpc/PrivateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ],
    "VpcId": {
     "Ref": "MarketPulseVpcC53BC1E4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/PrivateSubnet1/Subnet"
   }
  },
  "MarketPulseVpcPrivateSubnet1RouteTableED71CB09": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "MarketPulseEcsStack/MarketPulseVpc/PrivateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ],
    "VpcId": {
     "Ref": "MarketPulseVpcC53BC1E4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/PrivateSubnet1/RouteTable"
   }
  },
  "MarketPulseVpcPrivateSubnet1RouteTableAssociationF2025004": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MarketPulseVpcPrivateSubnet1RouteTableED71CB09"
    },
    "SubnetId": {
     "Ref": "MarketPulseVpcPrivateSubnet1SubnetAE2C0AD8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "MarketPulseVpcPrivateSubnet1DefaultRoute291995A3": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MarketPulseVpcPublicSubnet1NATGateway9EB77A57"
    },
    "RouteTableId": {
     "Ref": "MarketPulseVpcPrivateSubnet1RouteTableED71CB09"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "MarketPulseVpcPrivateSubnet2Subnet87ACD56C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1b",
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "MarketPulseEcsStack/MarketPulseVpc/PrivateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ],
    "VpcId": {
     "Ref": "MarketPulseVpcC53BC1E4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/PrivateSubnet2/Subnet"
   }
  },
  "MarketPulseVpcPrivateSubnet2RouteTable6D3891EB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "MarketPulseEcsStack/MarketPulseVpc/PrivateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ],
    "VpcId": {
     "Ref": "MarketPulseVpcC53BC1E4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/PrivateSubnet2/RouteTable"
   }
  },
  "MarketPulseVpcPrivateSubnet2RouteTableAssociationC9004F5F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MarketPulseVpcPrivateSubnet2RouteTable6D3891EB"
    },
    "SubnetId": {
     "Ref": "MarketPulseVpcPrivateSubnet2Subnet87ACD56C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "MarketPulseVpcPrivateSubnet2DefaultRoute107E3B56": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MarketPulseVpcPublicSubnet1NATGateway9EB77A57"
    },
    "RouteTableId": {
     "Ref": "MarketPulseVpcPrivateSubnet2RouteTable6D3891EB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "MarketPulseVpcIGW5E27A1F0": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Name",
      "Value": "MarketPulseEcsStack/MarketPulseVpc"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/IGW"
   }
  },
  "MarketPulseVpcVPCGWD1890218": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "MarketPulseVpcIGW5E27A1F0"
    },
    "VpcId": {
     "Ref": "MarketPulseVpcC53BC1E4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseVpc/VPCGW"
   }
  },
  "MarketPulseRepo0D0A5669": {
   "Type": "AWS::ECR::Repository",
   "Properties": {
    "RepositoryName": "marketpulse-india",
    "Tags": [
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseRepo/Resource"
   }
  },
  "MarketPulseClusterCD5D3009": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterName": "marketpulse-india",
    "Tags": [
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseCluster/Resource"
   }
  },
  "MarketPulseTaskTaskRoleA2661B21": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseTask/TaskRole/Resource"
   }
  },
  "MarketPulseTaskE1245B6C": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "TZ",
        "Value": "Asia/Kolkata"
       },
       {
        "Name": "ENV",
        "Value": "production"
       },
       {
        "Name": "AWS_SECRETS_NAME",
        "Value": ""
       }
      ],
      "Essential": true,
      "HealthCheck": {
       "Command": [
        "CMD-SHELL",
        "curl -f http://localhost:8000/health || exit 1"
       ],
       "Interval": 30,
       "Retries": 3,
       "StartPeriod": 40,
       "Timeout": 10
      },
      "Image": {
       "Fn::Join": [
        "",
        [
         {
          "Fn::Select": [
           4,
           {
            "Fn::Split": [
             ":",
             {
              "Fn::GetAtt": [
               "MarketPulseRepo0D0A5669",
               "Arn"
              ]
             }
            ]
           }
          ]
         },
         ".dkr.ecr.",
         {
          "Fn::Select": [
           3,
           {
            "Fn::Split": [
             ":",
             {
              "Fn::GetAtt": [
               "MarketPulseRepo0D0A5669",
               "Arn"
              ]
             }
            ]
           }
          ]
         },
         ".",
         {
          "Ref": "AWS::URLSuffix"
         },
         "/",
         {
          "Ref": "MarketPulseRepo0D0A5669"
         },
         ":latest"
        ]
       ]
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "MarketPulseTaskMarketPulseContainerLogGroup2E603919"
        },
        "awslogs-stream-prefix": "marketpulse",
        "awslogs-region": "ap-south-1"
       }
      },
      "Name": "MarketPulseContainer",
      "PortMappings": [
       {
        "ContainerPort": 8000,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "512",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "MarketPulseTaskExecutionRole49B3175C",
      "Arn"
     ]
    },
    "Family": "MarketPulseEcsStackMarketPulseTaskFD57DCCC",
    "Memory": "1024",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "Tags": [
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "MarketPulseTaskTaskRoleA2661B21",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseTask/Resource"
   }
  },
  "MarketPulseTaskMarketPulseContainerLogGroup2E603919": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "RetentionInDays": 7,
    "Tags": [
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseTask/MarketPulseContainer/LogGroup/Resource"
   }
  },
  "MarketPulseTaskExecutionRole49B3175C": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseTask/ExecutionRole/Resource"
   }
  },
  "MarketPulseTaskExecutionRoleDefaultPolicyB1B0B077": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:GetDownloadUrlForLayer",
        "ecr:BatchGetImage"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "MarketPulseRepo0D0A5669",
         "Arn"
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "MarketPulseTaskMarketPulseContainerLogGroup2E603919",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "MarketPulseTaskExecutionRoleDefaultPolicyB1B0B077",
    "Roles": [
     {
      "Ref": "MarketPulseTaskExecutionRole49B3175C"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseTask/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "MarketPulseServiceLBCA19FF40": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "MarketPulseServiceLBSecurityGroupE0B95084",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "MarketPulseVpcPublicSubnet1Subnet700B32B9"
     },
     {
      "Ref": "MarketPulseVpcPublicSubnet2Subnet72535A89"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "MarketPulseVpcPublicSubnet1DefaultRouteBC415C85",
    "MarketPulseVpcPublicSubnet1RouteTableAssociation7100B6FA",
    "MarketPulseVpcPublicSubnet2DefaultRouteF9C9C32C",
    "MarketPulseVpcPublicSubnet2RouteTableAssociationBB75B692"
   ],
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseService/LB/Resource"
   }
  },
  "MarketPulseServiceLBSecurityGroupE0B95084": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB MarketPulseEcsStackMarketPulseServiceLB27966595",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "MarketPulseVpcC53BC1E4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseService/LB/SecurityGroup/Resource"
   }
  },
  "MarketPulseServiceLBSecurityGrouptoMarketPulseEcsStackMarketPulseServiceSecurityGroupC80F6C358000EDD5597E": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "MarketPulseServiceSecurityGroupB9E960D6",
      "GroupId"
     ]
    },
    "FromPort": 8000,
    "GroupId": {
     "Fn::GetAtt": [
      "MarketPulseServiceLBSecurityGroupE0B95084",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 8000
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseService/LB/SecurityGroup/to MarketPulseEcsStackMarketPulseServiceSecurityGroupC80F6C35:8000"
   }
  },
  "MarketPulseServiceLBPublicListener252CD995": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "MarketPulseServiceLBPublicListenerECSGroupC3B7837A"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "MarketPulseServiceLBCA19FF40"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseService/LB/PublicListener/Resource"
   }
  },
  "MarketPulseServiceLBPublicListenerECSGroupC3B7837A": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckIntervalSeconds": 30,
    "HealthCheckPath": "/health",
    "Matcher": {
     "HttpCode": "200"
    },
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "MarketPulseVpcC53BC1E4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseService/LB/PublicListener/ECSGroup/Resource"
   }
  },
  "MarketPulseService218CCCC4": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "MarketPulseClusterCD5D3009"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "MarketPulseContainer",
      "ContainerPort": 8000,
      "TargetGroupArn": {
       "Ref": "MarketPulseServiceLBPublicListenerECSGroupC3B7837A"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "MarketPulseServiceSecurityGroupB9E960D6",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "MarketPulseVpcPrivateSubnet1SubnetAE2C0AD8"
       },
       {
        "Ref": "MarketPulseVpcPrivateSubnet2Subnet87ACD56C"
       }
      ]
     }
    },
    "Tags": [
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ],
    "TaskDefinition": {
     "Ref": "MarketPulseTaskE1245B6C"
    }
   },
   "DependsOn": [
    "MarketPulseServiceLBPublicListenerECSGroupC3B7837A",
    "MarketPulseServiceLBPublicListener252CD995",
    "MarketPulseTaskTaskRoleA2661B21"
   ],
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseService/Service/Service"
   }
  },
  "MarketPulseServiceSecurityGroupB9E960D6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "MarketPulseEcsStack/MarketPulseService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "Env",
      "Value": "production"
     },
     {
      "Key": "Project",
      "Value": "MarketPulse"
     }
    ],
    "VpcId": {
     "Ref": "MarketPulseVpcC53BC1E4"
    }
   },
   "DependsOn": [
    "MarketPulseTaskTaskRoleA2661B21"
   ],
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseService/Service/SecurityGroup/Resource"
   }
  },
  "MarketPulseServiceSecurityGroupfromMarketPulseEcsStackMarketPulseServiceLBSecurityGroupA782658180000A30A943": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 8000,
    "GroupId": {
     "Fn::GetAtt": [
      "MarketPulseServiceSecurityGroupB9E960D6",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "MarketPulseServiceLBSecurityGroupE0B95084",
      "GroupId"
     ]
    },
    "ToPort": 8000
   },
   "DependsOn": [
    "MarketPulseTaskTaskRoleA2661B21"
   ],
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseService/Service/SecurityGroup/from MarketPulseEcsStackMarketPulseServiceLBSecurityGroupA7826581:8000"
   }
  },
  "MarketPulseServiceTaskCountTarget17FE751A": {
   "Type": "AWS::ApplicationAutoScaling::ScalableTarget",
   "Properties": {
    "MaxCapacity": 3,
    "MinCapacity": 1,
    "ResourceId": {
     "Fn::Join": [
      "",
      [
       "service/",
       {
        "Ref": "MarketPulseClusterCD5D3009"
       },
       "/",
       {
        "Fn::GetAtt": [
         "MarketPulseService218CCCC4",
         "Name"
        ]
       }
      ]
     ]
    },
    "RoleARN": {
     "Fn::Join": [
      "",
      [
       "arn:",
       {
        "Ref": "AWS::Partition"
       },
       ":iam::775935274215:role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService"
      ]
     ]
    },
    "ScalableDimension": "ecs:service:DesiredCount",
    "ServiceNamespace": "ecs"
   },
   "DependsOn": [
    "MarketPulseTaskTaskRoleA2661B21"
   ],
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseService/Service/TaskCount/Target/Resource"
   }
  },
  "MarketPulseServiceTaskCountTargetCpuScaling90B3202B": {
   "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
   "Properties": {
    "PolicyName": "MarketPulseEcsStackMarketPulseServiceTaskCountTargetCpuScalingDF30C29C",
    "PolicyType": "TargetTrackingScaling",
    "ScalingTargetId": {
     "Ref": "MarketPulseServiceTaskCountTarget17FE751A"
    },
    "TargetTrackingScalingPolicyConfiguration": {
     "PredefinedMetricSpecification": {
      "PredefinedMetricType": "ECSServiceAverageCPUUtilization"
     },
     "ScaleInCooldown": 60,
     "ScaleOutCooldown": 30,
     "TargetValue": 70
    }
   },
   "DependsOn": [
    "MarketPulseTaskTaskRoleA2661B21"
   ],
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/MarketPulseService/Service/TaskCount/Target/CpuScaling/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31R0W7bMAz8lr4rGpphe8+yrghQbIYd9LWgFdblolCGRCUIBP/7IDmJ3W4YIIDH41EiT0u9/PJV39/BKSzMbr+w1OrUCJi9glN4SWiWOj33Rq1f+blaqyq2lkwTW0bJ3IRqFwW30Fqc+IlbheAMgZDjmziDh02Vw0+QRxA8wVlVno4gOF28YUHPeBOMk1yylQiYtwOyqAZN9CTnR+9iX2b4L/HQeQzhL3rDhR8UGq9Tjb0LJM6XZ6csl4NOaxuDoM+1K/wBvoO8dNh/x1diuq78kXEsQIx+xl16G/RHMqONF9gYsNnGfMnaRZZBERx0qt1od4mVs2TKoCMalHVd0OnJdTcLrrgs8NKDZG+DXvW9JVO+58nB7htYYIO7DwOhhSBkrINdWxTE3XGp07+7/fjeLJ/rKAjyRXPFs/oWfIdyG3uWDgomGURxwYAl7nSaTMriYt97Z [...]
   },
   "Metadata": {
    "aws:cdk:path": "MarketPulseEcsStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "MarketPulseServiceLoadBalancerDNS897F5E96": {
   "Value": {
    "Fn::GetAtt": [
     "MarketPulseServiceLBCA19FF40",
     "DNSName"
    ]
   }
  },
  "MarketPulseServiceServiceURL39CC975B": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "MarketPulseServiceLBCA19FF40",
        "DNSName"
       ]
      }
     ]
    ]
   }
  },
  "LoadBalancerDNS": {
   "Description": "ALB DNS — use as BACKEND_URL",
   "Value": {
    "Fn::GetAtt": [
     "MarketPulseServiceLBCA19FF40",
     "DNSName"
    ]
   }
  },
  "EcrRepositoryUri": {
   "Value": {
    "Fn::Join": [
     "",
     [
      {
       "Fn::Select": [
        4,
        {
         "Fn::Split": [
          ":",
          {
           "Fn::GetAtt": [
            "MarketPulseRepo0D0A5669",
            "Arn"
           ]
          }
         ]
        }
       ]
      },
      ".dkr.ecr.",
      {
       "Fn::Select": [
        3,
        {
         "Fn::Split": [
          ":",
          {
           "Fn::GetAtt": [
            "MarketPulseRepo0D0A5669",
            "Arn"
           ]
          }
         ]
        }
       ]
      },
      ".",
      {
       "Ref": "AWS::URLSuffix"
      },
      "/",
      {
       "Ref": "MarketPulseRepo0D0A5669"
      }
     ]
    ]
   }
  },
  "ClusterName": {
   "Value": {
    "Ref": "MarketPulseClusterCD5D3009"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
